fix: reduced gaps between lines in a list

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -703,11 +703,6 @@ p.tableblock {
   margin-top: 0.5rem;
 }
 
-.doc .olist li + li,
-.doc .ulist li + li {
-  margin-top: 0.5rem;
-}
-
 .doc .ulist .listingblock,
 .doc .olist .listingblock,
 .doc .admonitionblock .listingblock {
@@ -1148,4 +1143,12 @@ p.tableblock {
   font-size: 14px;
   color: #2d3f49;
   line-height: 1.65;
+}
+
+.doc li p:not(.tableblock) {
+  margin: 0;
+  padding-bottom: 10px;
+  font-size: 14px;
+  color: #2d3f49;
+  line-height: 1.45;
 }
